extra code in decorator to allow for explicit default values (@Modified), fixed 1 test; 39 failing