@@ -8,13 +8,14 @@ import org.e2immu.language.cst.api.info.Info;
 import org.e2immu.language.cst.api.info.MethodInfo;
 import org.e2immu.language.cst.api.info.TypeInfo;
 import org.e2immu.language.cst.api.statement.Statement;
-import org.e2immu.language.cst.impl.analysis.PropertyImpl;
-import org.e2immu.language.cst.impl.analysis.ValueImpl;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Test;
 
+import java.lang.annotation.Annotation;
 import java.util.List;
 
+import static org.e2immu.language.cst.impl.analysis.PropertyImpl.IMMUTABLE_TYPE;
+import static org.e2immu.language.cst.impl.analysis.ValueImpl.ImmutableImpl.MUTABLE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -39,13 +40,19 @@ public class TestLinkToReturnValue extends CommonTest {
         analyzer.go(ao);
 
         TypeInfo clazz = javaInspector.compiledTypesManager().get(Class.class);
-        assertTrue(clazz.analysis().getOrDefault(PropertyImpl.IMMUTABLE_TYPE, ValueImpl.ImmutableImpl.MUTABLE).isImmutable());
+        assertTrue(clazz.analysis().getOrDefault(IMMUTABLE_TYPE, MUTABLE).isImmutable());
+
+        TypeInfo annotation = javaInspector.compiledTypesManager().getOrLoad(Annotation.class);
+        assertTrue(annotation.analysis().getOrDefault(IMMUTABLE_TYPE, MUTABLE).isImmutableHC());
+        MethodInfo annotationType = annotation.findUniqueMethod("annotationType", 0);
+        assertTrue(annotationType.isNonModifying());
 
         MethodInfo method = X.findUniqueMethod("method", 1);
-        Statement s0 = method.methodBody().statements().get(0);
+        Statement s0 = method.methodBody().statements().getFirst();
         VariableData vd0 = VariableDataImpl.of(s0);
         VariableInfo viAc0 = vd0.variableInfo("annotationClazz");
-        // an immutable type cannot be linked to anything
+        // an immutable type cannot be linked to anything, but the result of linking is determined
+        // by the fact that annotationType() is non-modifying and Annotation is immutable-hc.
         assertEquals("", viAc0.linkedVariables().toString());
     }
 }
